<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- SIGN-IN SCREEN -->
    <LinearLayout android:id="@+id/screen_sign_in" style="@style/LLScreen">
        <TextView style="@style/GameTitle" />
        <TextView style="@style/GameBlurb" />

        <Button android:id="@+id/button_single_player"
            style="@style/MainScreenButton"
            android:text="@string/single_player" />
        <com.google.android.gms.common.SignInButton android:id="@+id/button_sign_in"
            style="@style/SignInButton" />
    </LinearLayout>

    <!-- MAIN SCREEN -->
    <LinearLayout android:id="@+id/screen_main" style="@style/LLScreen">
        <TextView style="@style/GameTitle" />
        <Button android:id="@+id/button_single_player_2"
            style="@style/MainScreenButton"
            android:text="@string/single_player" />
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="@string/single_player_explanation" />
        <Button android:id="@+id/button_quick_game"
            style="@style/MainScreenButton"
            android:text="@string/quick_game" />
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="@string/quick_game_explanation" />
        <Button android:id="@+id/button_invite_players"
            style="@style/MainScreenButton"
            android:text="@string/invite_players" />
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="@string/invite_players_explanation" />
        <Button android:id="@+id/button_see_invitations"
            style="@style/MainScreenButton"
            android:text="@string/see_invitations" />
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="@string/see_invitations_explanation" />
        <Button android:id="@+id/button_sign_out"
            style="@style/SignOutButton"
            android:text="@string/sign_out" />
    </LinearLayout>

    <!-- INVITATION POPUP -->
    <LinearLayout android:id="@+id/invitation_popup" style="@style/InvPopup">
        <TextView android:id="@+id/incoming_invitation_text" style="@style/InvPopupText" />
        <Button android:id="@+id/button_accept_popup_invitation"
            style="@style/InvPopupButton"
            android:text="@string/accept_popup_invite" />
    </LinearLayout>

    <!-- "PLEASE WAIT" SCREEN -->
    <LinearLayout android:id="@+id/screen_wait" style="@style/LLScreen">
        <TextView style="@style/Blurb" android:text="@string/please_wait" />
    </LinearLayout>

    <!-- GAMEPLAY SCREEN -->
    <LinearLayout android:id="@+id/screen_game" style="@style/LLScreen">
        <TextView android:id="@+id/instructions"
            style="@style/Instructions" android:text="@string/instructions" />
        <TextView android:id="@+id/my_score" style="@style/ScoreDisplay" />
        <Button android:id="@+id/button_click_me"
            style="@style/GameButton"
            android:text="@string/click_me"
            android:layout_marginBottom="20dp" />
        <TextView android:id="@+id/countdown" style="@style/FigureLabel" />

        <LinearLayout style="@style/ScoresBox">
            <TextView android:id="@+id/score0" style="@style/ScoreText" />
            <TextView android:id="@+id/score1" style="@style/ScoreText" />
            <TextView android:id="@+id/score2" style="@style/ScoreText" />
            <TextView android:id="@+id/score3" style="@style/ScoreText" />
        </LinearLayout>
    </LinearLayout>

    <!--Gocha Game SCREEN-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/parent">
        <!--score part -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".11">
            <TextView
                android:id="@+id/ScoreText"
                android:text="Score:"
                android:layout_marginTop="@dimen/score_mergin"
                android:layout_marginLeft="@dimen/score_mergin"
                android:layout_marginRight="@dimen/score_mergin"
                android:layout_gravity="top|start"
                android:textColor="@color/White"
                android:textSize="@dimen/score_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/ScoreNum"
                android:text="0"
                android:layout_marginTop="@dimen/score_mergin"
                android:layout_toRightOf="@+id/ScoreText"
                android:textColor="@color/White"
                android:textSize="@dimen/score_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/ExemptText"
                android:text="Exempt:"
                android:layout_marginTop="@dimen/score_mergin"
                android:layout_marginLeft="@dimen/score_mergin"
                android:layout_marginRight="@dimen/score_mergin"
                android:layout_toRightOf="@id/ScoreNum"
                android:layout_gravity="top|start"
                android:textColor="@color/White"
                android:textSize="@dimen/score_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/ExemptNum"
                android:text="0"
                android:layout_marginTop="@dimen/score_mergin"
                android:layout_toRightOf="@+id/ExemptText"
                android:textColor="@color/White"
                android:textSize="@dimen/score_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>


        <!--Main game part -->

        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/score_mergin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".89"
            android:background="@color/button">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/lefthalf"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <RelativeLayout
                            android:id="@+id/leftout"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:src="@drawable/ic_record_voice_over_black_24dp"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:id="@+id/leftin"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">
                        </RelativeLayout>
                    </LinearLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/white" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/righthalf"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <RelativeLayout
                            android:id="@+id/rightin"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">
                            <RelativeLayout
                                android:layout_alignParentBottom="true"
                                android:id="@+id/rightinimage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </RelativeLayout>
                        <RelativeLayout
                            android:id="@+id/rightout"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:src="@drawable/ic_record_voice_over_black_24dp"/>
                        </RelativeLayout>
                    </LinearLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/white" />
                </RelativeLayout>
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@android:color/white" />
            <ImageView
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ink"
                android:id="@+id/ink"
                android:visibility="invisible"/>
        </RelativeLayout>

    </LinearLayout>

    <!--game over part-->
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/gameover"
        android:background="@color/backGround"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/gameoverpoints"
            android:layout_weight="2"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:layout_width="@dimen/front_page_button_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:id="@+id/restart"
                android:text="RESTART"
                android:layout_centerInParent="true"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:layout_width="@dimen/front_page_button_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:id="@+id/quit"
                android:text="QUIT"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>
